Add Windows Cleanup module, portable build, and jar: URL fix
Windows Cleanup module:
- Add WINDOWS_CLEANUP category to ActionCategory enum
- Add 12 cleanup actions to ActionRegistry: temp files, Windows Update
  cache, Delivery Optimization cache, upgrade leftovers ($Windows.~BT,
  $Windows.~WS), old setup logs, DISM component cleanup, DISM ResetBase,
  Recycle Bin, previous Windows installation removal, crash dumps,
  thumbnail cache, and DirectX shader cache
- Safe actions are ON by default; aggressive actions (ResetBase, Recycle
  Bin, Windows.old removal) are OFF by default

Portable build (bundled JRE):
- Add Launcher.java as non-JavaFX entry point for shaded JAR / jpackage
  (bypasses JavaFX module check on startup)
- Update pom.xml: set mainClass to debloater.Launcher for the shade
  plugin; keep javafx-maven-plugin pointing at MainApp for dev use
- Add build-portable.bat: runs mvn clean package then jpackage to
  produce a self-contained app image with bundled JRE at
  release/app-image/Win11Debloater/ — no Java installation needed on
  the target machine

Bug fix:
- Allow jar: URLs in WebView navigation filter (MainApp.java) so the
  UI loads correctly when running from a shaded JAR instead of showing
  "external navigation blocked"

Housekeeping:
- Update .gitignore: exclude release/, .wix/, dependency-reduced-pom.xml
- Update README: add portable build instructions, document Windows
  Cleanup module, add Launcher to project structure, note hardcoded
  paths in build script

Signed-off-by: Hytsu